--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,20 +8,21 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Repository
       - name: Checkout the code
         uses: actions/checkout@v4
 
       - name: Set up Pixi
         uses: prefix-dev/setup-pixi@v0.8.9
 
-      # Build
       - name: Build
-        run: |
-          pixi run build
+        run: pixi run build
 
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
       # Upload
       - name: Upload
         run: |
