--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Repository
       - name: Checkout the code
         uses: actions/checkout@v4
 
@@ -19,11 +17,11 @@ jobs:
 
       # Build
       - name: Build
-        run: |
-          pixi run build
+        run: pixi run build
 
       # Upload
       - name: Upload
+        if: ${{ github.ref == 'refs/heads/main' && github.repository == 'Auto-Mech/mechtools'}}
         run: |
           pixi run upload
         env:
