--- a/pixi.toml
+++ b/pixi.toml
@@ -9,7 +9,8 @@ version = "0.1.0"
 build-pac99 = "cd PAC99 && pixi build"
 build-thermp = "cd ThermP && pixi build"
 build-projrot = "cd ProjRot && pixi build"
-build = { depends-on = ["build-pac99", "build-thermp", "build-projrot"] }
+build-slatec = "cd SLATEC && pixi build"
+build = { depends-on = ["build-pac99", "build-thermp", "build-projrot", "build-slatec"] }
 upload = "pixi run rattler-build upload anaconda -o Auto-Mech */*.conda"
 
 [dependencies]
